// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UrlInput /> with a non-string value passed in 1`] = `
<input
  autoComplete="false"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  type="url"
  value="4593.3"
/>
`;

exports[`<UrlInput /> with a required attribute 1`] = `
<input
  autoComplete="false"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  required={true}
  type="url"
  value=""
/>
`;

exports[`<UrlInput /> with a value passed in 1`] = `
<input
  autoComplete="false"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  type="url"
  value="https://www.gmail.com"
/>
`;

exports[`<UrlInput /> with autocomplete enabled 1`] = `
<input
  autoComplete="true"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  type="url"
  value=""
/>
`;

exports[`<UrlInput /> with no props 1`] = `
<input
  autoComplete="false"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  type="url"
  value=""
/>
`;
